syntax = "proto3";
package autoscaler;

option java_package = "de.evoila.cf.autoscaler.kafka.protobuf";
option java_outer_classname = "PbLogMessage";

option csharp_namespace = "de.evoila.cf.autoscaler.PbLogMessage";

message ProtoLogMessage {
    int64 timestamp = 1;
    string logMessage = 2;
    string logMessageType = 3;
    string sourceType = 4;
    string appId = 5;
    string appName = 6;
    string space = 7;
    string organization = 8;
    string sourceInstance = 9;
}